[gd_scene load_steps=39 format=2]

[ext_resource path="res://initialAssets/initPlayerSlideHit1.png" type="Texture" id=1]
[ext_resource path="res://initialAssets/initPlayerSlideHit2.png" type="Texture" id=2]
[ext_resource path="res://initialAssets/initPlayerRunHit1.png" type="Texture" id=3]
[ext_resource path="res://initialAssets/initPlayerRunHit2.png" type="Texture" id=4]
[ext_resource path="res://initialAssets/initPlayerIdle1.png" type="Texture" id=5]
[ext_resource path="res://initialAssets/initPlayerIdle2.png" type="Texture" id=6]
[ext_resource path="res://initialAssets/initPlayerIdleHit2.png" type="Texture" id=7]
[ext_resource path="res://initialAssets/initPlayerRunHit4.png" type="Texture" id=8]
[ext_resource path="res://initialAssets/initPlayerIdleHit1.png" type="Texture" id=9]
[ext_resource path="res://initialAssets/initPlayerRunHit3.png" type="Texture" id=10]
[ext_resource path="res://initialAssets/initPlayerRun2.png" type="Texture" id=11]
[ext_resource path="res://initialAssets/initPlayerRun1.png" type="Texture" id=12]
[ext_resource path="res://initialAssets/initPlayerSlide.png" type="Texture" id=13]
[ext_resource path="res://Prototype/Player.gd" type="Script" id=14]
[ext_resource path="res://initialAssets/initPlayerJump.png" type="Texture" id=15]
[ext_resource path="res://initialAssets/initPlayerJumpHit1.png" type="Texture" id=16]
[ext_resource path="res://initialAssets/initPlayerJumpHit2.png" type="Texture" id=17]
[ext_resource path="res://initialAssets/initPlayerDie1.png" type="Texture" id=18]
[ext_resource path="res://initialAssets/initPlayerDie2.png" type="Texture" id=19]
[ext_resource path="res://initialAssets/initPlayerDie3.png" type="Texture" id=20]
[ext_resource path="res://initialAssets/initPlayerDie5.png" type="Texture" id=21]
[ext_resource path="res://initialAssets/initPlayerDie6.png" type="Texture" id=22]
[ext_resource path="res://initialAssets/initPlayerDie4.png" type="Texture" id=23]
[ext_resource path="res://initialAssets/initPlayerDie7.png" type="Texture" id=24]
[ext_resource path="res://initialAssets/initPlayerDie8.png" type="Texture" id=25]
[ext_resource path="res://initialAssets/initPlayerDie9.png" type="Texture" id=26]
[ext_resource path="res://initialAssets/initPlayerRunCrouchHit4.png" type="Texture" id=27]
[ext_resource path="res://initialAssets/initPlayerIdleCrouchHit1.png" type="Texture" id=28]
[ext_resource path="res://initialAssets/initPlayerIdleCrouchHit2.png" type="Texture" id=29]
[ext_resource path="res://initialAssets/initPlayerRunCrouchHit3.png" type="Texture" id=30]
[ext_resource path="res://initialAssets/initPlayerRunCrouch1.png" type="Texture" id=31]
[ext_resource path="res://initialAssets/initPlayerRunCrouch2.png" type="Texture" id=32]
[ext_resource path="res://initialAssets/initPlayerIdleCrouch.png" type="Texture" id=33]
[ext_resource path="res://initialAssets/initPlayerRunCrouchHit2.png" type="Texture" id=34]
[ext_resource path="res://initialAssets/initPlayerRunCrouchHit1.png" type="Texture" id=35]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "slide",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 35 ), ExtResource( 34 ), ExtResource( 30 ), ExtResource( 27 ) ],
"loop": true,
"name": "run_crouch_hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 11 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 23 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ) ],
"loop": false,
"name": "die",
"speed": 8.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 10 ), ExtResource( 8 ) ],
"loop": true,
"name": "run_hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 33 ) ],
"loop": true,
"name": "idle_crouch",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "slide_hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "jump_hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 31 ), ExtResource( 32 ) ],
"loop": true,
"name": "run_crouch",
"speed": 5.0
}, {
"frames": [ ExtResource( 28 ), ExtResource( 29 ) ],
"loop": true,
"name": "idle_crouch_hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 7 ) ],
"loop": true,
"name": "idle_hit",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 16.581
height = 67.369

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 13, 42 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 12
script = ExtResource( 14 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle_crouch"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -5.04538, 2.10224 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -3, 6 )
shape = SubResource( 3 )

[node name="HitTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
